配置服务器相关 修改定时器相关

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,38 @@
-#记录安装的包的版本
-
-pymysql=0.9.3
-rest_framework
-Pillow=6.2.1
-requests=2.22.0
-datetime =4.3
-apscheduler=3.6.3
+APScheduler==3.6.3
+automium==0.2.6
+automium-web==0.1.1
+certifi==2019.9.11
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+cryptography==2.8
+DateTime==4.3
+Django==2.2.7
+django-apscheduler==0.3.0
+django-cors-headers==3.2.0
+django-cors-middleware==1.5.0
+djangorestframework==3.10.3
+Flask==1.1.1
+gevent==1.4.0
+greenlet==0.4.15
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+legacy==0.1.6
+MarkupSafe==1.1.1
+mysqlclient==1.4.6
+Pillow==6.2.1
+pycparser==2.19
+PyMySQL==0.9.3
+pytz==2019.3
+requests==2.22.0
+six==1.12.0
+sqlparse==0.3.0
+tzlocal==2.0.0
+urllib3==1.25.7
+views==0.3
+websocket==0.2.1
+websocket-client==0.56.0
+websocket-server==0.4
+Werkzeug==0.16.0
+zope.interface==4.7.1
