--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -9,4 +9,4 @@ vacuum = True
 max-requests = 5000
 thunder-lock = True
 enable-threads = True
-deamonize = /data/log/dongdong.log
+#deamonize = /data/log/dongdong.log
